# IRC

./: CMakeLists.txt  Makefile
Includes/client/: client.h
Includes/common/: common.h
Includes/server/: server.h  typedefs.h
Libs/libft/: CMakeLists.txt  Makefile  ft_itoa.c  libft.h  list.c
Libs/libft/ft_printf/: ft_strlen.c
Srcs/client/: is_connect_command.c  main.c
Srcs/common/: receive_msg.c  send_msg.c
Srcs/server/: accept_incoming_connection.c  check_for_incoming_data.c  choose_necessary_sockets.c  disconnect_clients.c  examine_sockets.c  execute_client_command.c  execute_exit_command.c  execute_join_command.c  execute_leave_command.c  execute_msg_command.c  execute_nick_command.c  execute_who_command.c  is_command.c  is_exit_command.c  is_leave_command.c  is_msg_command.c  is_who_command.c  main.c  parse_args.c  process_incoming_data.c  process_server_stdin.c  read_incoming_data.c  remove_processed_data.c  send_data_to_clients.c  start_server.c
